Suggested fixes to demo
Feel free to squash

Change-Id: I0f15ab26cdb9e8d59bf86912f5c355f1a4bdf4c9

--- a/rebaser/views/editor.ejs
+++ b/rebaser/views/editor.ejs
@@ -12,9 +12,6 @@
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 		<title><%= docName %> - VisualEditor Rebase Demo</title>
 
-		<!-- visualEditor.standalone.build -->
-		<link rel=stylesheet href="../../src/ui/styles/ve.ui.DebugBar.css">
-
 		<!-- oojs-ui-apex -->
 		<link rel=stylesheet href="../../lib/oojs-ui/oojs-ui-apex.css" class="stylesheet-ltr">
 		<link rel=stylesheet href="../../lib/oojs-ui/oojs-ui-apex-icons-editing-core.css" class="stylesheet-ltr">
@@ -35,7 +32,7 @@
 
 	</head>
 	<body>
-		<div class="ve-demo-logo" style="margin-bottom: 0.5em;"></div>
+		<div class="ve-pad-logo"></div>
 		<div style="clear: both;"></div>
 		<div class="ve-demo-editor"></div>
 
